@@ -1,5 +1,6 @@
 = v.1.2.3 (in git)
 * It is no longer needed to send in key, sensor and size to the Map's constructor as long as these values are set on GoogleStaticMapsHelper.
+* A map does now respond to width and height.
 
 = v.1.2.2
 * It is now possible to chain the pushing of markers on to map.
